[package]
name = "FragExtract"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.38", features = ["derive"]}
colored = "3.0.0"
hungarian = "1.1.1"
matrix = "0.22.0"
munkres = "0.5.2"
nalgebra = "0.33.2"
pathfinding = "4.14.0"
pkg-config = "0.3.32"
plotters = "0.3.7"
plotters-svg = "0.3.7"
rayon = "1.10.0"
ryan = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
